--- a/src/main/resources/assets/geneticsmod/lang/en_us.json
+++ b/src/main/resources/assets/geneticsmod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.geneticsmod.debug_tool": "Genetics Debug Tool",
 
+  "block.geneticsmod.terminal": "Terminal",
+
   "itemGroup.geneticsmodtab": "Genetics Mod"
 }
