--- a/src/main/resources/assets/geneticsmod/lang/en_us.json
+++ b/src/main/resources/assets/geneticsmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.geneticsmod.debug_tool": "Genetics Debug Tool",
+  "item.geneticsmod.dna_sampler_knife": "Surgical Knife",
 
   "block.geneticsmod.terminal": "Terminal",
 
