--- a/src/main/resources/assets/geneticsmod/lang/en_us.json
+++ b/src/main/resources/assets/geneticsmod/lang/en_us.json
@@ -1,6 +1,9 @@
 {
   "item.geneticsmod.debug_tool": "Genetics Debug Tool",
   "item.geneticsmod.dna_sampler_knife": "Surgical Knife",
+  "item.geneticsmod.dna_sampler_syringe": "Surgical Syringe",
+  "item.geneticsmod.dna_sampler_swab": "Surgical Swabber",
+  "item.geneticsmod.dna_sampler_clipbone": "Surgical Clipper",
 
   "block.geneticsmod.terminal": "Terminal",
 
