Tooltip added and fixes

--- a/src/main/resources/assets/geneticsmod/lang/en_us.json
+++ b/src/main/resources/assets/geneticsmod/lang/en_us.json
@@ -61,7 +61,26 @@
   "sounds.geneticsmod.swabber": "Swab",
   "sounds.geneticsmod.syringe_suck": "Syringe Suck",
 
-  "tooltip.geneticsmod.genesampleritem.unidentified" : "Unidentified sample...",
+  "tooltip.geneticsmod.genesampleitem.unidentified" : "Unidentified sample...",
+  "tooltip.geneticsmod.genesampleitem.size" : "Size: ",
+  "tooltip.geneticsmod.genesampleitem.hp" : "Health: ",
+  "tooltip.geneticsmod.genesampleitem.attack_damage" : "Damage: ",
+  "tooltip.geneticsmod.genesampleitem.attack_speed" : "Attack Speed: ",
+  "tooltip.geneticsmod.genesampleitem.hostility" : "Hostility: ",
+  "tooltip.geneticsmod.genesampleitem.move_speed" : "Move Speed: ",
+  "tooltip.geneticsmod.genesampleitem.mob_type" : "Mob: ",
+  "tooltip.geneticsmod.genesampleitem.drops_mod" : "Drops Mod: ",
+  "tooltip.geneticsmod.genesampleitem.exp_mod" : "Exp Mod: ",
+  "tooltip.geneticsmod.genesampleitem.fertility" : "Fertility: ",
+  "tooltip.geneticsmod.genesampleitem.gills" : "Gills: ",
+  "tooltip.geneticsmod.genesampleitem.fire_immune" : "Fire Immune: ",
+  "tooltip.geneticsmod.genesampleitem.oviparous" : "Oviparous: ",
+  "tooltip.geneticsmod.genesampleitem.lactation" : "Can Milk: ",
+  "tooltip.geneticsmod.genesampleitem.maturing_time" : "Mature Time: ",
+  "tooltip.geneticsmod.genesampleitem.hold" : "Hold ",
+  "tooltip.geneticsmod.genesampleitem.shift" : "Shift ",
+  "tooltip.geneticsmod.genesampleitem.details" : "for details",
+
   "gui.geneticsmod.terminal_block" : "Terminal",
   "gui.geneticsmod.gene_analyzer_block" : "Gene Analyzer",
   "gui.geneticsmod.gene_isolator_block": "Gene Isolator"
