Adding more nbt data to mobs

--- a/src/main/resources/assets/geneticsmod/lang/en_us.json
+++ b/src/main/resources/assets/geneticsmod/lang/en_us.json
@@ -63,7 +63,7 @@
 
   "tooltip.geneticsmod.genesampleitem.unidentified" : "Unidentified sample...",
   "tooltip.geneticsmod.genesampleitem.size" : "Size",
-  "tooltip.geneticsmod.genesampleitem.hp" : "Health",
+  "tooltip.geneticsmod.genesampleitem.health" : "Health",
   "tooltip.geneticsmod.genesampleitem.attack_damage" : "Damage",
   "tooltip.geneticsmod.genesampleitem.attack_speed" : "Attack Speed",
   "tooltip.geneticsmod.genesampleitem.hostility" : "Hostility",
